# temno

./: LICENSE  README.md  pyproject.toml
doc/adr/: 0001-record-architecture-decisions.md  0002-use-pydantic-for-the-yasno-api-response.md  0003-use-httpx-for-api-client.md  0004-use-http-caching-for-api-calls.md  0005-use-vcr-for-api-calls.md  0006-use-typer-for-cli.md  0007-use-wireup-for-di.md  0008-use-dependency-injector-for-di.md  0009-use-wireup-for-di-again.md
src/cli/: __main__.py  app.py  main.py  render.py
src/minions/: arange.py  timetravel.py
src/temno/: __main__.py  arange.py  bootstrap.py  calendar.py  cli.py  commands.py  factories.py  map_yasno.py  model.py  render.py  views.py
src/temno/cli/: __main__.py  app.py  render.py
src/temno/minions/: __init__.py  arange.py
src/yasno_api/: __init__.py  client.py  model.py  schema.py
src/yasno_api/examples/: schedule.json
tests/cli/: test_render.py
tests/temno/: test_calendar.py  test_cli.py  test_map_yasno.py  test_render.py
tests/temno/cli/: test_render.py
tests/yasno_api/: test_client.py
tests/yasno_api/cassettes/test_client/: test_fetch_cities_is_ok.yaml  test_fetch_houses_is_ok.yaml  test_fetch_schedule_is_ok.yaml  test_fetch_schedule_without_current_is_ok.yaml  test_fetch_streets_is_ok.yaml
