[project]
name = "temno"
version = "0.1.0"
description = "Exploring Yasno's Outage Scheduling API"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "hishel>=0.1.1",
    "httpx>=0.28.1",
    "more-itertools>=10.5.0",
    "pydantic>=2.10.4",
    "pytest-recording>=0.13.2",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "rich>=13.9.4",
    "pytest-cov>=6.0.0",
    "typer>=0.15.1",
]
