[project]
name = "temno"
version = "0.1.0"
description = "Exploring Yasno's Outage Scheduling API"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "hishel>=0.1.1",
    "httpx>=0.28.1",
    "icalendar>=6.1.0",
    "more-itertools>=10.5.0",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "wireup>=0.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest-recording>=0.13.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "pytest-clarity>=1.0.1",
]

# https://docs.astral.sh/uv/concepts/projects/config/#project-packaging
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
temno = "temno.cli:app"

# https://packaging.python.org/en/latest/guides/creating-command-line-tools/#installing-the-package-with-pipx
[project.entry-points."pipx.run"]
temno = "temno.cli:app"

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-ra --color=yes"
testpaths = [
    "tests",
]